--- a/index.html
+++ b/index.html
@@ -63,14 +63,12 @@
             Junior QA engineer
           </p>
           <p class="bio-about">
-            Energetic and communicative, novice programming enthusiast.
-            I served in the Polish Navy on the ship ORP "Gen. K. PUŁASKI" as the commander of the EI group and completed a software tester course.
-            During the course, I had the opportunity to learn about test design techniques and tools such as JIRA, TESTRAIL, and SELENIUM or POSTMAN.
-            During the service I was responsible for the NTDS (Navy Tactical Data System) service.
-            My goal is to combine these two experiences during my further professional career.
-            My greatest advantage is the need for professional development.
-            At work, I value a friendly and supportive atmosphere that helps me develop and achieve my goals.
-            I believe that my qualifications and the high need for professional development will bring benefits to your company and me.
+            An energetic and communicative beginner programming enthusiast.
+            I served in the Polish Navy on ORP “Gen. K. PUŁASKI” as the commander of the EI group and I completed a software tester course.
+            During the course, I had an opportunity to learn about test design techniques and tools such as JIRA, TESTRAIL, and SELENIUM or POSTMAN.
+            During my service I was responsible for the NTDS (Navy Tactical Data System). My goal is to combine these two experiences in my further professional career.
+            My greatest advantage is the need for professional development. At work, I value a friendly and supportive atmosphere which helps me develop and achieve my goals.
+            I believe that my qualifications and my high need for professional growth will bring benefits both to your company and to myself.
           </p>
         </section>
 
@@ -81,6 +79,7 @@
             <li><a href="https://github.com/JakubKOSIOREK/ZDTESTpol82" class="projects-link">SDA-ZDTESTpol82</a></li>
             <li><a href="https://github.com/JakubKOSIOREK/My_Postman_Collection" class="projects-link">POSTMAN</a></li>
             <li><a href="https://github.com/JakubKOSIOREK/LEGO_Train_Track_Mockup" class="projects-link">Lego train MOC</a></li>
+            <li><a href="https://github.com/JakubKOSIOREK/GoIT_7-day_marathon" class="projects-link">My first web</a></li>
           </ol>
         </section>
         <section class="jobs">
@@ -91,13 +90,13 @@
           <h3 class="jobs-occupation">Petty Officer 1st Class at <span class="accent">Service</span></h3>
           <p class="jobs-time">April 2002 - January 2022</p>
           <ul class="experience">
-            <li class="experience-item">operation of electronic equipment and software</li>
-            <li class="experience-item">implementation of periodic inspections, maintaining the current efficiency of electronic equipment and software</li>
+            <li class="experience-item">operating electronic equipment and software</li>
+            <li class="experience-item">conducting periodic inspections, keeping electronic equipment and software in good running order</li>
             <li class="experience-item">defining the causes of malfunctions in electronic equipment and software, and removing the causes of faults and errors</li>
-            <li class="experience-item">training and systematic supervision over the implementation of team members to tasks</li>
-            <li class="experience-item">maintaining a high level of morale and discipline in the group</li>
-            <li class="experience-item">developing proposals for improving the organization of work</li>
-            <li class="experience-item">systematic improvement of the specialist knowledge possessed;</li>
+            <li class="experience-item">training team members and systematically overseeing their performance of new tasks</li>
+            <li class="experience-item">maintaining high morale and discipline in the group</li>
+            <li class="experience-item">developing proposals how to improve work organization</li>
+            <li class="experience-item">systematic upskilling</li>
           </ul>
         </section>
         <section class="education">
